feat: add admin content analytics detail
